--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
             "src": "server.js",
             "dest": "/"
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/",
+            "destination": "server.js"
+        }
     ]
 }
