--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "rewrites": [
         {
-            "source": "/",
-            "destination": "server.js"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
